# stereocamera

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/stereocamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  camera_manager.cpp  camera_manager.h  native-lib.cpp  stereo_camera.cpp
app/src/main/java/com/example/stereocamera/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/stereocamera/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/libcxx_helper/: CMakeLists.txt
